--- a/WT_Skript/WT_Script.tex
+++ b/WT_Skript/WT_Script.tex
@@ -1618,8 +1618,21 @@ P_{\tilde{X}}(\{\tilde{x}\})\geq\sum_{\tilde{x}\in M} \tilde{x}P_{\tilde{X}}(\{\
 	heißt \textit{Verteilungsfunktion} von $P$. Für eine reelle Zufallsvariable $X$ ist die Verteilungsfunktion $F_X$ definiert durch:
 	$$F_X:\mathbb{R}\rightarrow[0,1], \quad c\longmapsto F_X(c):=P(X\subseteq c)$$
 	
+	\subsection{Definition Stetige Gleichverteilung}
+	\label{defStetigeGleichverteilung}	
+	Sei $M\in\mathcal{B}^1$ (eine borelsche Menge) mit $\lambda^1 (M)=m$ und 
+	$$\rho : M\rightarrow\mathbb{R}\: , \quad x\longmapsto \frac{1}{m}$$
+	eine konsistente Funktion. Ein W-Maß auf $(M,\mathcal{B}^1_M )$ mit der Dichtefunktion $\rho$ heißt dann \textit{stetige Gleichverteilung} auf $M$.
+	\paragraph{Notation:} $\mathcal{U}_M$
 	
-	
+	\subsection{Definition Normalverteilung}
+	\label{defNormalverteilung}
+	Ein W-Maß auf $\mathcal{B}^1$ mit der Dichtefunktion
+	$$\phi_{m,v} : \mathbb{R}\rightarrow\mathbb{R} \: , \quad x\longmapsto \frac{1}{\sqrt{2\pi v}}e^{-\frac{(x-m)^2}{2v}}$$
+	heißt \textit{Normalverteilung} oder \textit{Gauß-Verteilung} mit der Varianz $v$.
+	\paragraph{Notation:} $\mathcal{N}_{m,v}$
+	\paragraph{Bemerkung:}
+	$\mathcal{N}_{m=0,v=1}$ heißt \textit{Standardabweichung}.
 	
 	
 	
@@ -1646,6 +1659,45 @@ P_{\tilde{X}}(\{\tilde{x}\})\geq\sum_{\tilde{x}\in M} \tilde{x}P_{\tilde{X}}(\{\
 	\paragraph{Beispiel (6):}	
 	Siehe Unterpunkt \ref{defBorelsch} .
 	
+	\section*{Dichtefunktion}
+	Die sogenannte Dichte/Dichtefunktion auf $\mathbb{R}$ beziehungsweise $D\in\mathcal{B}^1$ stellt eine Analogie zur Zähldichte dar. Mit Dichtefunktionen lassen sich ... mit Hilfe von Zähldichte in diskrete Funktionen W-Maße auf $\mathcal{B}^1$ beziehungsweise $\mathcal{B}^1_D$ konvertieren
+	$$\mathcal{B}^1_D = \{E\cap D : E\in\mathcal{B}^1\}$$
+	$$$$
+	\begin{align*}
+	f:\: D\rightarrow\mathbb{R} \text{ Dichtefunktion }  \leftrightarrow & (1)\:\: f(x)\geq 0 \quad \forall x\in D\\
+	& (2)\:\: f^1(E)\in\mathcal{B}^1_D \quad \forall E\in\mathcal{B}^1\\
+	& (3)\:\: \int fdx = 1
+	\end{align*}
+	
+	\paragraph{$\rightarrow$ Spezialfall:}
+	\begin{itemize}
+		\item $\displaystyle D=[a,b]\subseteq\mathbb{R} \: (\in\mathbb{B}^1)$ ein Intervall
+		\item $f:D\rightarrow\mathbb{R}$ nichtregulär und stetig!
+		\item[$\hookrightarrow$] $\displaystyle \int^b_a f(x)dx$ kann berechnet werden\\
+		falls $\displaystyle \int_a^b f(x)dx=1$ , liegt mit $f$ eine Dichtefunktion vor
+		\item[$\hookrightarrow$] Wir können ein W-Maß berechnen
+		$$P([c,d])=\int_c^d f(x)dx \: , \quad c<d ,\:\: c,d\in D=[a,b]$$
+		und allgemein $\displaystyle P(E)=\int_E fd(x)$, $\forall E\in\mathcal{B}^1_D$ (wobei hier Lebesgue-Integral auftaucht) 
+	\end{itemize}
+
+	\paragraph{Beispiel:}
+	$D=[0,1]$ , $f(x)=2x$ \quad $(x\in[0,1])$
+	
+	\section*{Zusammenhang zwischen Verteilungsfunktion und Dichtefunktion}
+	Sei $X$ eine reelle Zufallsvariable auf einem W-Raum $(\Omega, \mathcal{A}, P)$.\\
+	Die Verteilung $P_X =P\circ X^{-1}$ von $X$ besitzt genau dann eine Dichtefunktion $\rho: \mathbb{R}\rightarrow\mathbb{R}$, wenn 
+	$$\int_{-\infty}^c \rho (x)dx = F_X(c), \quad \forall c\in\mathbb{R}$$
+	gilt, wobei $F_X$ die Verteilungsfunktion von $X$ bezeichnet.	
+	
+	\paragraph{Bemerkung:}
+	Die Dichtefunktion $f$ der Verteilung $P_X$ ist genau dann eine stetige Funktion, wenn die Verteilungsfunktion $F_X$ von $X$ stetig differenzierbar ist. Dann gilt:
+	$$f=F^1_X$$
+	
+	\paragraph{$\hookrightarrow$ Beispiele für stetige Funktionen}
+	\begin{enumerate}
+		\item Siehe Definition Gleichverteilung (\ref{defStetigeGleichverteilung})
+		\item Siehe Definition Normalverteilung (\ref{defNormalverteilung})
+	\end{enumerate}		
 	
 	
 	
