--- a/WT_Skript/WT_Script.tex
+++ b/WT_Skript/WT_Script.tex
@@ -1660,11 +1660,11 @@ P_{\tilde{X}}(\{\tilde{x}\})\geq\sum_{\tilde{x}\in M} \tilde{x}P_{\tilde{X}}(\{\
 	Siehe Unterpunkt \ref{defBorelsch} .
 	
 	\section*{Dichtefunktion}
-	Die sogenannte Dichte/Dichtefunktion auf $\mathbb{R}$ beziehungsweise $D\in\mathcal{B}^1$ stellt eine Analogie zur Zähldichte dar. Mit Dichtefunktionen lassen sich ... mit Hilfe von Zähldichte in diskrete Funktionen W-Maße auf $\mathcal{B}^1$ beziehungsweise $\mathcal{B}^1_D$ konvertieren
+	Die sogenannte Dichte/Dichtefunktion auf $\mathbb{R}$ beziehungsweise $D\in\mathcal{B}^1$ stellt eine Analogie zur Zähldichte dar. Mit Dichtefunktionen lassen sich W-Maße auf $\mathcal{B}^1$ beziehungsweise $\mathcal{B}^1_D$ definieren
 	$$\mathcal{B}^1_D = \{E\cap D : E\in\mathcal{B}^1\}$$
 	$$$$
 	\begin{align*}
-	f:\: D\rightarrow\mathbb{R} \text{ Dichtefunktion }  \leftrightarrow & (1)\:\: f(x)\geq 0 \quad \forall x\in D\\
+	f:\: D\rightarrow\mathbb{R} \text{ Dichtefunktion }  \Leftrightarrow & (1)\:\: f(x)\geq 0 \quad \forall x\in D\\
 	& (2)\:\: f^1(E)\in\mathcal{B}^1_D \quad \forall E\in\mathcal{B}^1\\
 	& (3)\:\: \int fdx = 1
 	\end{align*}
@@ -1672,7 +1672,7 @@ P_{\tilde{X}}(\{\tilde{x}\})\geq\sum_{\tilde{x}\in M} \tilde{x}P_{\tilde{X}}(\{\
 	\paragraph{$\rightarrow$ Spezialfall:}
 	\begin{itemize}
 		\item $\displaystyle D=[a,b]\subseteq\mathbb{R} \: (\in\mathbb{B}^1)$ ein Intervall
-		\item $f:D\rightarrow\mathbb{R}$ nichtregulär und stetig!
+		\item $f:D\rightarrow\mathbb{R}$ positiv und stetig!
 		\item[$\hookrightarrow$] $\displaystyle \int^b_a f(x)dx$ kann berechnet werden\\
 		falls $\displaystyle \int_a^b f(x)dx=1$ , liegt mit $f$ eine Dichtefunktion vor
 		\item[$\hookrightarrow$] Wir können ein W-Maß berechnen
